syntax = "proto3";

package proto;

option go_package = ".;proto";
import "google/api/annotations.proto";

// User entity is able to access the console and perform various operations.
message User {
  // User's Identifier
  uint32 ID = 1;
  // User's Name
  string name = 2;
  // User's Email Address
  string email = 4;
  // User's Password
  string password = 5;

}

// Create user
message CreateUser {
  message Request {
    User user = 1;
  }
  message Response {
    User user = 1;
  }
}
// Update user
message UpdateUser {
  // Update User Request
  message Request {
    User user = 1;
  }

  //Update User Response
  message Response {
    User user = 1;
  }
}

// Get user
message GetUser {
  message Request {
    uint32 ID = 1;
  }
  message Response {
    User user = 1;
  }
}

// Get all users
message GetAllUsers{

  // Get all users request
  message Request {}

  // Get all users response
  message Response {
    // List of Users
    repeated User users = 1;
  }
}

// User Service
service UserService {

  // Create User
  rpc CreateUser(CreateUser.Request) returns (CreateUser.Response){
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  };

  // Update User
  rpc UpdateUser(UpdateUser.Request) returns (UpdateUser.Response){
    option (google.api.http) = {
      put: "/users/{user.ID}"
      body: "*"
    };
  };

  // GetUser
  rpc GetUser(GetUser.Request) returns (GetUser.Response){
    option (google.api.http) = {
      get: "/users/{ID}"
    };
  };

  // Get All Users
  rpc GetAllUsers(GetAllUsers.Request) returns (GetAllUsers.Response){
    option (google.api.http) = {
      get: "/users"
    };
  };

}